# langgraph_project_template

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  langgraph.json  mcp_config.json  pyproject.toml  readme.md
src/agent/: __init__.py  config.py  enums.py  graph.py  mcp_client.py  state.py  utils.py
src/embeddings/: model.py
src/memory/: config.py  graph.py  state.py  utils.py
src/tools/: __init__.py  example.py
