[project]
name = "langgraph-tool-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Williamson",email = "paulw.900430@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph-cli[inmem] (>=0.2.10,<0.3.0)"
]

[tool.poetry]
packages = [
    { include = "src/agent" },
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
